ユーザ登録と編集の追加と修正

--- a/admin_user_register.css
+++ b/admin_user_register.css
@@ -46,7 +46,7 @@ body {
 .cancelbtn {
   width: auto;
   font-weight: bold;
-  background-color: #f44336;
+  background-color: #ffa7a7;
   padding: 10px;
   border: none;
   border-radius: 5px;
